--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,4 +58,7 @@ h1, h2, h3, h4, h5, h6 {
   .font-times {
     font-family: 'Times New Roman', sans-serif;
   }
+  .font-montserrat {
+    font-family: 'Montserrat', sans-serif;
+  }
 }
